# movie-ticketing-backend

./: .dockerignore  Dockerfile  README.md  base-image-btp.sh  pyproject.toml
data/: app.db
docs/: TRD.md
src/movie_ticketing_backend/: __init__.py  app.py
src/movie_ticketing_backend/db/: repository.py  session.py
src/movie_ticketing_backend/entity/: __init__.py  ticket.py
src/movie_ticketing_backend/route/: __init__.py  ticket_route.py
src/movie_ticketing_backend/scheme/: __init__.py  ticket.py
src/movie_ticketing_backend/service/: __init__.py  ticket_service.py
src/movie_ticketing_backend/util/: __init__.py  idempotency.py
