[project]
name = "movie-ticketing-backend"
version = "0.1.0"
description = "Movie ticketing backend API with FastAPI and SQLite"
readme = "README.md"
authors = [
    { name = "Kilsoo Kang", email = "kilsoo75@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.9.0",
    "python-dateutil>=2.9.0",
]

[project.scripts]
movie-ticketing-backend = "movie_ticketing_backend:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/movie_ticketing_backend"]